fix styles related to size and spacing

--- a/client/scss/components/hero/_hero--title.scss
+++ b/client/scss/components/hero/_hero--title.scss
@@ -14,8 +14,8 @@
     @include font-details($size: 24px);
     font-size: 2.4rem;
 
-    max-width: 360px;
-    max-width: 36rem;
+    max-width: 365px;
+    max-width: 36.5rem;
   }
 }
 
