--- a/client/scss/components/projects/_projects--list-item--title.scss
+++ b/client/scss/components/projects/_projects--list-item--title.scss
@@ -3,6 +3,10 @@
 
   display: inline-block;
   position: relative;
+  padding: 10px 5px;
+  padding: 1rem 0.5rem;
+  width: 150px;
+  width: 15rem;
   vertical-align: middle;
   transition: transform $transition-duration-extended ease-out;
 
